Saw evans' model. Took an idea from it. matrixop can now directly read a matrix from a file. Will be used for a constant damatrix(matrixop) construction. TODO: do i need to allow constant damatrix(matrixop) to be rotated? if so, code it. if not, good for me. - check gaussian quadrature / alpha calculation / rotation code to remove alpha=1 problems. See papers for solution? - Try other, simpler quadrature tests. - Check atmos code and add in better support for microwaves / light sources.   At UV / vis / nir, the sun dominates. At fir, microwave, radio, internal heat provides radiation   source which needs to be factored into each layer. A fast planck law or rayleigh-jeans calculation will help here.   Be sure that the model code implements this correctly. It is critical. - Add in effective phase function calculator, which will take the standard pfs and convolute them.   It will have to reeval for each set on angles. Ugh. Pray that pfs are mostly invariant. - Support for other types of quadrature (easy, just copy from gaussian). Figure out implementation   for selecting a special type of quadrature in calculations. - Speed up program. Find out what routines are slowing down damatrix evals. Probably has to do with stack killing.   There should be compiler options to return vals by reference... If no support, create the appropriate functions. - Figure out how to thread damatrix / atmos calculations. - Polynomial zero-finding (needed for quadratures). Implement ahlquist algorithm / translate from fortran. - Do code comparison with evans' code for inspiration. - Run test cases. - Implement mpi to allow calculations on multiple machines simultaneously. - Add in code support for various band models / known optical thicknesses / other lbl code. Will be useful. - Do Ellingson and sbdart comparisons to show that UV, vis and nir cases also work.
git-svn-id: file:///mnt/svn/rtmath@212 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -221,6 +221,7 @@
     <ClInclude Include="macros.h" />
     <ClInclude Include="matrixop.h" />
     <ClInclude Include="MurmurHash3.h" />
+    <ClInclude Include="pfFixed.h" />
     <ClInclude Include="phaseFunc.h" />
     <ClInclude Include="polynomial.h" />
     <ClInclude Include="Qcalc-Rayleigh.h" />
@@ -274,6 +275,7 @@
     <ClCompile Include="lbl.cpp" />
     <ClCompile Include="matrixop.cpp" />
     <ClCompile Include="MurmurHash3.cpp" />
+    <ClCompile Include="pfFixed.cpp" />
     <ClCompile Include="phaseFunc.cpp" />
     <ClCompile Include="polynomial.cpp" />
     <ClCompile Include="Qcalc-Rayleigh.cpp" />
