matrixop bug turned out to be a bad call to the set function. I was missing an argument. Oops. I converted most of the unsigned ints to size_t, as this is more appropriate.
Turned off msvc 2010 throw location mapping, as it was getting in the way of compilation. Also
turned off config.cpp, since it depends on boost filesystem, which is missing from the
virtual machine agravine (on galahad). It is a _large_ install, so it was easier to do this.

Matrixop needs repivoting tested. Shall create appropriate tests for linux, as agravine needs a
restart to update itself. Then, I need to use the upper triangular matrix in repivoting operations.
I also have to check if repivot can repivot a second matrix. Will be used in inverse and eigen* calculations.


git-svn-id: file:///mnt/svn/rtmath@218 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -83,7 +83,7 @@
     <ClCompile>
       <WarningLevel>Level4</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;HEAP_CHECK;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <FavorSizeOrSpeed>Neither</FavorSizeOrSpeed>
       <IntrinsicFunctions>false</IntrinsicFunctions>
@@ -175,6 +175,9 @@
   <ItemGroup>
     <ClInclude Include="atmos.h" />
     <ClInclude Include="command.h" />
+    <ClInclude Include="config.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClInclude>
     <ClInclude Include="daDiagonalMatrix.h" />
     <ClInclude Include="daInitLayer.h" />
     <ClInclude Include="daLayer.h" />
@@ -198,7 +201,6 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </None>
     <ClInclude Include="common_templates.h" />
-    <ClInclude Include="config.h" />
     <None Include="old_damatrix.h.txt">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
@@ -256,7 +258,10 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </None>
-    <ClCompile Include="config.cpp" />
+    <ClCompile Include="config.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
     <None Include="old_damatrix.cpp.txt">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
