File loading works. Next is orientation-averaging / interpolation and generation of various matrices.
git-svn-id: file:///mnt/svn/rtmath@237 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/.cproject
+++ b/rtmath/rtmath/.cproject
@@ -63,11 +63,11 @@
 							</tool>
 						</toolChain>
 					</folderInfo>
-					<fileInfo id="cdt.managedbuild.config.gnu.cross.lib.debug.955700108.1076816500" name="ddscat.cpp" rcbsApplicability="disable" resourcePath="ddscat.cpp" toolsToInvoke="cdt.managedbuild.tool.gnu.cross.cpp.compiler.438859328.781650998">
-						<tool id="cdt.managedbuild.tool.gnu.cross.cpp.compiler.438859328.781650998" name="Cross G++ Compiler" superClass="cdt.managedbuild.tool.gnu.cross.cpp.compiler.438859328"/>
+					<fileInfo id="cdt.managedbuild.config.gnu.cross.lib.debug.955700108.814278444" name="ddscat.cpp" rcbsApplicability="disable" resourcePath="ddscat.cpp" toolsToInvoke="cdt.managedbuild.tool.gnu.cross.cpp.compiler.438859328.1942712705">
+						<tool id="cdt.managedbuild.tool.gnu.cross.cpp.compiler.438859328.1942712705" name="Cross G++ Compiler" superClass="cdt.managedbuild.tool.gnu.cross.cpp.compiler.438859328"/>
 					</fileInfo>
 					<sourceEntries>
-						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="ddscat.cpp" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
