--- a/rtmath/rtmath-console-test/.cproject
+++ b/rtmath/rtmath-console-test/.cproject
@@ -61,6 +61,7 @@
 								</option>
 								<option id="gnu.cpp.link.option.libs.181751094" name="Libraries (-l)" superClass="gnu.cpp.link.option.libs" valueType="libs">
 									<listOptionValue builtIn="false" value="rtmath"/>
+									<listOptionValue builtIn="false" value="netcdf"/>
 									<listOptionValue builtIn="false" value="boost_system"/>
 									<listOptionValue builtIn="false" value="boost_filesystem"/>
 								</option>
@@ -72,9 +73,6 @@
 							</tool>
 						</toolChain>
 					</folderInfo>
-					<fileInfo id="cdt.managedbuild.config.gnu.cross.exe.debug.1508093569.1733527536" name="test.cpp" rcbsApplicability="disable" resourcePath="test.cpp" toolsToInvoke="cdt.managedbuild.tool.gnu.cross.cpp.compiler.970381453.654811148">
-						<tool id="cdt.managedbuild.tool.gnu.cross.cpp.compiler.970381453.654811148" name="Cross G++ Compiler" superClass="cdt.managedbuild.tool.gnu.cross.cpp.compiler.970381453"/>
-					</fileInfo>
 					<sourceEntries>
 						<entry excluding="test.cpp|lbltest.cpp" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
