--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -174,6 +174,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="atmos.h" />
+    <ClInclude Include="cdf-ddscat.h" />
     <ClInclude Include="command.h" />
     <ClInclude Include="config.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
@@ -185,6 +186,7 @@
     <ClInclude Include="damatrix_override.h" />
     <ClInclude Include="damatrix_quad.h" />
     <ClInclude Include="daPf.h" />
+    <ClInclude Include="ddscat2.h" />
     <ClInclude Include="defs.h" />
     <ClInclude Include="mapid.h" />
     <ClInclude Include="mie-abNCalc.h" />
@@ -246,6 +248,7 @@
     <ClCompile Include="damatrix.cpp" />
     <ClCompile Include="damatrix_quad.cpp" />
     <ClCompile Include="daPf.cpp" />
+    <ClCompile Include="ddscat2.cpp" />
     <ClCompile Include="mie-abNCalc.cpp" />
     <ClCompile Include="mie-AnCalc.cpp" />
     <ClCompile Include="mie-phaseFunc.cpp" />
