--- a/rtmath/rtmath/rtmath.vcxproj.filters
+++ b/rtmath/rtmath/rtmath.vcxproj.filters
@@ -174,6 +174,12 @@
     <ClInclude Include="config.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ddscat2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="cdf-ddscat.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="rtmath.cpp">
@@ -277,6 +283,9 @@
     </ClCompile>
     <ClCompile Include="pfFixed.cpp">
       <Filter>PhaseFuncs\Other</Filter>
+    </ClCompile>
+    <ClCompile Include="ddscat2.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
