Tests will now pring debug preamble information somewhere in the test. Revision listing reenabled in a better manner for non-windows systems.
git-svn-id: file:///mnt/svn/rtmath@278 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/Makefile
+++ b/rtmath/rtmath/Makefile
@@ -19,11 +19,17 @@ all: dynamic static
 clean:
 	rm -rf *.o bin/* tests/*.o
 
+# Pre-build updates repositiory revition
+pre-build:
+	@tcsh ./getRev.csh
+	@touch debug.cpp
+
+
 # No pure c files used here for now
-.c.o:
+.c.o: pre-build
 	$(CC) $(CCFLAGS) -c $? -o $(?:.c=.o)
 
-.cpp.o:
+.cpp.o: pre-build
 	$(CPP) $(CCFLAGS) -c $? -o $(?:.cpp=.o)
 
 dynamic: $(OBJS)
