--- a/rtmath/rtmath/debug_subversion.h.template
+++ b/rtmath/rtmath/debug_subversion.h.template
@@ -2,5 +2,5 @@
 
 #define SUB_REV $WCREV$
 #define SUB_DATE "$WCDATE$"
-#define SUB_WCRANGE "$WCRANGE$"
+//#define SUB_WCRANGE "$WCRANGE$"
 #define SUB_SOURCE "$WCURL$"
