Tiny tweak to ensure that debug is updated, by adding FORCE rule to makefile. FORCE chosen instead of .PHONY for compatibility with other versions of make.
git-svn-id: file:///mnt/svn/rtmath@284 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/Makefile
+++ b/rtmath/rtmath/Makefile
@@ -20,7 +20,7 @@ clean:
 	rm -rf *.o bin/* lib/* tests/*.o src/*.o
 
 # Pre-build updates repositiory revition
-pre-build:
+pre-build: FORCE
 	@tcsh ./getRev.csh
 	@touch debug.cpp
 
@@ -37,6 +37,8 @@ dynamic: $(OBJS) pre-build
 
 static: $(OBJS) pre-build
 	$(AR) rcs lib/librtmath.a $(OBJS)
+
+FORCE:
 
 # Compiles regular code along with test files
 test: dynamic $(OBJSTEST)
