And another small error fixed
git-svn-id: file:///mnt/svn/rtmath@285 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/Makefile
+++ b/rtmath/rtmath/Makefile
@@ -22,7 +22,7 @@ clean:
 # Pre-build updates repositiory revition
 pre-build: FORCE
 	@tcsh ./getRev.csh
-	@touch debug.cpp
+	@touch src/debug.cpp
 
 
 # No pure c files used here for now
