config namespace tests introduced. findSegment is broken and needs a fix. config transitioned to use boost filesystem to ensure that files exist, and the load function throws upon error.
Need to transition it to a fully throwable implementation, and need to move to std::shared_ptr. 

Added tests/data directory to contain data files for automated testing purposes.

error classes were added to cover unknown errors and nonexistant files. Should add file is really a directory error, too.




git-svn-id: file:///mnt/svn/rtmath@293 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/Makefile
+++ b/rtmath/rtmath/Makefile
@@ -5,7 +5,7 @@ CC = gcc
 CPP = g++
 LD = g++
 AR = ar
-CCFLAGS = -ggdb -fPIC -rdynamic -std=c++0x
+CCFLAGS = -ggdb -fPIC -rdynamic -std=c++0x -D_DEBUG
 LIBS = -ggdb -lm -lnetcdf -lboost_filesystem -lboost_unit_test_framework -lboost_system
 SRCSCPP = $(wildcard src/*.cpp)
 SRCSC = $(wildcard *.c)
@@ -13,6 +13,8 @@ SRCSC = $(wildcard *.c)
 OBJS = $(SRCSCPP:.cpp=.o) $(SRCSC:.c=.o)
 SRCSTEST = $(wildcard tests/*.cpp)
 OBJSTEST = $(SRCSTEST:.cpp=.o)
+
+TESTDATA=`pwd`/tests/data/
 
 all: dynamic static
 
