rtmath-apps structures created. Builds correctly, I think.
git-svn-id: file:///mnt/svn/rtmath@294 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/Makefile
+++ b/rtmath/rtmath-apps/Makefile
@@ -1,44 +1,39 @@
-BINOUTCOMBO = combo
-BINOUTDDPARSE = ddparse
-FC = gfortran
+#FC = gfortran
 CC = gcc
 CPP = g++
 LD = g++
-FFLAGS = -fdefault-integer-8 -fdefault-real-8 -ggdb
+#FFLAGS = -fdefault-integer-8 -fdefault-real-8 -ggdb
 CCFLAGS = -ggdb -std=c++0x -fopenmp
-LIBS = -lm -lgfortran -lnetcdf -ggdb -lboost_filesystem -lboost_system -lrtmath -fopenmp
+LIBS = -lm -lgfortran -lnetcdf -ggdb -lboost_filesystem -lboost_unit_test_framework -lboost_system -lrtmath -fopenmp
 WDIR=`pwd`
 IDIR=$(HOME)/bin
 
-FFILES =
-CFILES = 
-CPPFILES = 
-COMBOFILES = combo.cpp
-DDPARSEFILES = ddparse.cpp
+COMBOFILES = $(wildcard combo/*.cpp)
+DDPARSEFILES = $(wildcard ddparse/*.cpp)
 
 all: combo ddparse
 
 clean:
-	rm -rf *.o $(BINOUTCOMBO) $(BINOUTDDPARSE)
+	rm -rf *.o */*.o bin/*
 	
 distclean:
-	rm -rf $(IDIR)/$(BINOUTCOMBO) $(IDIR)/$(BINOUTDDPARSE)
+	rm -rf $(IDIR)/combo $(IDIR)/ddparse
 	
 install: all distclean
-	ln -s $(WDIR)/$(BINOUTCOMBO) $(IDIR)/$(BINOUTCOMBO)
-	ln -s $(WDIR)/$(BINOUTDDPARSE) $(IDIR)/$(BINOUTDDPARSE)
+	ln -s $(WDIR)/bin/combo $(IDIR)/combo
+	ln -s $(WDIR)/bin/ddparse $(IDIR)/ddparse
 
 .f.o:
-	$(FC) $(FFLAGS) -c $?
+	$(FC) $(FFLAGS) -c $? -o $(?:.f=.o)
 
 .c.o:
-	$(CC) $(CCFLAGS) -c $?
+	$(CC) $(CCFLAGS) -c $? -o $(?:.c=.o)
 
 .cpp.o:
-	$(CPP) $(CCFLAGS) -c $?
+	$(CPP) $(CCFLAGS) -c $? -o $(?:.cpp=.o)
 
-combo: $(FFILES:.f=.o) $(CFILES:.c=.o) $(CPPFILES:.cpp=.o) $(COMBOFILES:.cpp=.o) 
-	$(LD) -o $(BINOUTCOMBO) $(FFILES:.f=.o) $(CFILES:.c=.o) $(COMBOFILES:.cpp=.o) $(CPPFILES:.cpp=.o) $(LIBS)
+combo: $(COMBOFILES:.cpp=.o) 
+	$(LD) -o bin/combo $(COMBOFILES:.cpp=.o) $(LIBS)
 	
-ddparse: $(FFILES:.f=.o) $(CFILES:.c=.o) $(CPPFILES:.cpp=.o) $(DDPARSEFILES:.cpp=.o) 
-	$(LD) -o $(BINOUTDDPARSE) $(FFILES:.f=.o) $(CFILES:.c=.o) $(DDPARSEFILES:.cpp=.o) $(CPPFILES:.cpp=.o) $(LIBS)
+ddparse: $(DDPARSEFILES:.cpp=.o) 
+	$(LD) -o bin/ddparse $(DDPARSEFILES:.cpp=.o) $(LIBS)
