Tiny makefile tweak
git-svn-id: file:///mnt/svn/rtmath@297 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/Makefile
+++ b/rtmath/rtmath-apps/Makefile
@@ -26,6 +26,7 @@ install: all distclean
 	ln -s $(WDIR)/bin/combo $(IDIR)/combo
 	ln -s $(WDIR)/bin/rtmath-ddparse $(IDIR)/rtmath-ddparse
 	ln -s $(WDIR)/bin/rtmath-version $(IDIR)/rtmath-version
+	ln -s $(WDIR)/bin/rtmath-lblcalc $(IDIR)/rtmath-lblcalc
 
 .f.o:
 	$(FC) $(FFLAGS) -c $? -o $(?:.f=.o)
