rtmath-transmittance has been implemented. It is a console program that calculates transmittance in a line-by-line fashion according to a given atmospheric profile. It is also designed to test the lbl code.
rtmath-getm is a redo of liu's getm and genmtab into a c++ format. I made it so that I could test my implementation of ice refractive index calculations, used in my backscatter_f program.

TODO:
- compile-time default .rtmath config file location.
- Check lbl
- More refractive indices
- Expand command so that it can pull out multiple values with the same flag as a vector
- Create genmtab with appropriate formatting so ddscat can read it
- Redo liu's transmittance code so that a comparison is possible
- Allow config to return is a value even exists (by changing to bool and adding another exists() function)
- Write a better rtmath-apps makefile. It's getting unwieldy.



git-svn-id: file:///mnt/svn/rtmath@300 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/Makefile
+++ b/rtmath/rtmath-apps/Makefile
@@ -13,8 +13,11 @@ DDPARSEFILES = $(wildcard ddparse/*.cpp)
 RTMATHVERFILES = $(wildcard rtmath-version/*.cpp)
 LBLCALCFILES = $(wildcard lblcalc/*.cpp)
 BACK_F_FILES = $(wildcard backscatter_f/*.cpp)
+GM_FILES = $(wildcard getm/*.cpp)
+TM_FILES = $(wildcard transmittance/*.cpp)
 
-all: combo ddparse rtmath-version lblcalc backscatter_f
+
+all: combo ddparse rtmath-version lblcalc backscatter_f getm transmittance
 
 clean:
 	rm -rf *.o */*.o bin/*
@@ -29,6 +32,8 @@ install: all distclean
 	ln -s $(WDIR)/bin/rtmath-version $(IDIR)/rtmath-version
 	ln -s $(WDIR)/bin/rtmath-lblcalc $(IDIR)/rtmath-lblcalc
 	ln -s $(WDIR)/bin/rtmath-back_f $(IDIR)/rtmath-back_f
+	ln -s $(WDIR)/bin/rtmath-getm $(IDIR)/rtmath-getm
+	ln -s $(WDIR)/bin/rtmath-transmittance $(IDIR)/rtmath-transmittance
 
 .f.o:
 	$(FC) $(FFLAGS) -c $? -o $(?:.f=.o)
@@ -53,4 +58,10 @@ lblcalc: $(LBLCALCFILES:.cpp=.o)
 
 backscatter_f: $(BACK_F_FILES:.cpp=.o) 
 	$(LD) -o bin/rtmath-back_f $(BACK_F_FILES:.cpp=.o) $(LIBS)
+
+getm: $(GM_FILES:.cpp=.o)
+	$(LD) -o bin/rtmath-getm $(GM_FILES:.cpp=.o) $(LIBS)
+
+transmittance: $(TM_FILES:.cpp=.o)
+	$(LD) -o bin/rtmath-transmittance $(TM_FILES:.cpp=.o) $(LIBS)
 
