Some work done to ensure that debug info and config file path are run in a pre-build step that runs BEFORE the rest of the compile. test_config now checks that a default config path is provided. Note that this path is absolute (no ~/...) for now. Environment variable splicing can come later.
git-svn-id: file:///mnt/svn/rtmath@302 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/Makefile
+++ b/rtmath/rtmath/Makefile
@@ -20,13 +20,14 @@ TESTDATA=`pwd`/tests/data/
 all: dynamic static
 
 clean:
-	rm -rf *.o bin/* lib/* tests/*.o src/*.o
+	rm -rf *.o bin/* lib/* tests/*.o src/*.o build/*
 
 # Pre-build updates repositiory revition
 pre-build: FORCE
+	@echo "Runnning pre-build"
 	@tcsh ./getRev.csh
 	@touch src/debug.cpp
-	@echo #define RTC $(RTMATHCONF) > build/rtc.h
+	@echo "#define RTC "\"$(RTMATHCONF)"\"" > build/rtc.h
 	@touch src/config.cpp
 
 
