getm revised so it can also produce mtab. Should check why the refractive index is not exactly equal to Liu's value. Also, should change formatting for scientific notation for greater precision.
git-svn-id: file:///mnt/svn/rtmath@303 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/Makefile
+++ b/rtmath/rtmath-apps/Makefile
@@ -33,6 +33,7 @@ install: all distclean
 	ln -s $(WDIR)/bin/rtmath-lblcalc $(IDIR)/rtmath-lblcalc
 	ln -s $(WDIR)/bin/rtmath-back_f $(IDIR)/rtmath-back_f
 	ln -s $(WDIR)/bin/rtmath-getm $(IDIR)/rtmath-getm
+	ln -s $(WDIR)/bin/rtmath-getm $(IDIR)/rtmath-genmtab
 	ln -s $(WDIR)/bin/rtmath-transmittance $(IDIR)/rtmath-transmittance
 
 .f.o:
