Reworked header dependencies to improve build times. Reworked both code and test cases to again build successfully on windows. Added prebuild.bat to work like the Makefile. Generates the two headers used in recording the library versioning information.
git-svn-id: file:///mnt/svn/rtmath@308 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-test/rtmath-test.vcxproj
+++ b/rtmath/rtmath-test/rtmath-test.vcxproj
@@ -63,6 +63,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\rtmath\tests\test.cpp" />
+    <ClCompile Include="..\rtmath\tests\test_config.cpp" />
     <ClCompile Include="..\rtmath\tests\test_ddscat.cpp" />
     <ClCompile Include="..\rtmath\tests\test_debug.cpp" />
     <ClCompile Include="..\rtmath\tests\test_lbl.cpp" />
