--- a/rtmath/rtmath-test/rtmath-test.vcxproj.filters
+++ b/rtmath/rtmath-test/rtmath-test.vcxproj.filters
@@ -39,5 +39,8 @@
     <ClCompile Include="..\rtmath\tests\test_ddscat.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\rtmath\tests\test_config.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
