Forgot to add refract.cpp and refract.h to VS solution. Fixed. Implemented a build of all of the rtmath-apps. Redid all of their code to not use <> for header, and instead use "../../rtmath/rtmath/.....", as it limits them to the current rtmath library checkout. This will aid in bugfixes. Of course, not I can't just check out the apps, but I never did that anyways.
git-svn-id: file:///mnt/svn/rtmath@309 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -66,6 +66,7 @@
     <ClInclude Include="rtmath\rayleigh\rayleigh.h" />
     <ClInclude Include="rtmath\rayleigh\rayleighPhaseFunc.h" />
     <ClInclude Include="rtmath\rayleigh\Scalc-Rayleigh.h" />
+    <ClInclude Include="rtmath\refract.h" />
     <ClInclude Include="rtmath\resource.h" />
     <ClInclude Include="rtmath\rtmath.h" />
     <ClInclude Include="rtmath\splitstring.h" />
@@ -118,6 +119,7 @@
     <ClCompile Include="src\quadrature.cpp" />
     <ClCompile Include="src\rayleighPhaseFunc.cpp" />
     <ClCompile Include="src\recursivePolynomial.cpp" />
+    <ClCompile Include="src\refract.cpp" />
     <ClCompile Include="src\rtmath.cpp" />
     <ClCompile Include="src\Scalc-Rayleigh.cpp" />
     <ClCompile Include="src\Stdafx.cpp" />
